--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@testing-library/react": "^10.0.4",
     "babel-eslint": "^10.0.3",
+    "codecov": "^3.8.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
