--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 dist: bionic
 rvm:
-  - 2.6.5
+  - 2.6.6
 install:
-  - gem install travis
+  - bundle install
 branches:
   only:
     - master
@@ -29,7 +29,9 @@ before_install:
       export BURP_PROXY="http://$(hostname):8080"
     fi
 script:
-  - bin/load_env_secrets.sh -p secret/kdux/scp/staging/scp_config.json -s secret/kdux/scp/staging/scp_service_account.json -r secret/kdux/scp/staging/read_only_service_account.json -e test -n single-cell-portal-test
+  - ruby rails_test_setup.rb
+  - source config/secrets/.source_env.bash
+  - bin/run_tests.sh
 after_success:
   - |
     export BURP_ENABLE=-1
