--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,7 @@ before_install:
       export BURP_PROXY="http://$(hostname):8080"
     fi
 script:
-  - ruby rails_test_setup.rb
-  - source config/secrets/.source_env.bash
-  - bin/run_tests.sh
+  - bin/load_env_secrets.sh -p secret/kdux/scp/staging/scp_config.json -s secret/kdux/scp/staging/scp_service_account.json -r secret/kdux/scp/staging/read_only_service_account.json -e test -n single-cell-portal-test
 after_success:
   - |
     export BURP_ENABLE=-1
