--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery-ui": "1.12.1",
     "morpheus-app": "1.0.18",
     "plotly.js-dist": "1.54.0",
+    "react-plotly.js": "2.5.1",
     "pluralize": "^8.0.0",
     "pnp-webpack-plugin": "^1.6.4",
     "postcss-cssnext": "3.1.0",
