--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-scripts": "^3.4.0",
     "react-select": "^3.1.0",
     "react-table": "^7.1.0",
+    "react-switch": "6.0.0",
     "spin.js": "^4.0.0",
     "stylelint-config-sass-guidelines": "^7.0.0"
   },
