--- a/nginx.conf
+++ b/nginx.conf
@@ -65,8 +65,10 @@ http {
 	# Logging Settings
 	##
 
-	access_log /var/log/nginx/access.log;
+	access_log /var/log/nginx/access.log custom;
 	error_log /var/log/nginx/error.log;
+
+	log_format custom '$proxy_protocol_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
 
 	##
 	# Gzip Settings
