--- a/webapp.conf
+++ b/webapp.conf
@@ -5,7 +5,7 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 proxy_protocol;
     server_name $hostname;
     root /home/app/webapp/public;
     passenger_app_root /home/app/webapp;
@@ -14,60 +14,61 @@ server {
     more_clear_headers Server;
     more_clear_headers X-Powered-By;
 
-		if (-f $document_root/single_cell/maintenance.html) {
-			return 503;
-		}
+    if (-f $document_root/single_cell/maintenance.html) {
+        return 503;
+    }
 
-		error_page 503 @maintenance;
+    error_page 503 @maintenance;
 
-		location @maintenance {
-			rewrite ^(.*)$ /single_cell/maintenance.html break;
-		}
+    location @maintenance {
+        rewrite ^(.*)$ /single_cell/maintenance.html break;
+    }
 
-		location ^~ /single_cell/assets/ {
-				gzip_static on;
-				expires max;
-		}
+    location ^~ /single_cell/assets/ {
+            gzip_static on;
+            expires max;
+    }
 
-		add_header    X-Forwarded-Proto https always;
-		proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header  X-Forwarded-Proto $scheme;
-		proxy_set_header  Host $host;
-		proxy_set_header  X-Forwarded-Host $host;
+    add_header        X-Forwarded-Proto https always;
+    proxy_set_header  X-Real-IP $proxy_protocol_addr;
+    proxy_set_header  X-Forwarded-For $proxy_protocol_addr;
+    proxy_set_header  X-Forwarded-Proto $scheme;
+    proxy_set_header  Host $host;
+    proxy_set_header  X-Forwarded-Host $host;
 
-		# The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
+    # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
 
-		# Not familiar with Passenger, and used (G)Unicorn/Thin/Puma/pure Node before?
-		# Yes, this is all you need to deploy on Passenger! All the reverse proxying,
-		# socket setup, process management, etc are all taken care automatically for
-		# you! Learn more at https://www.phusionpassenger.com/.
-		passenger_enabled on;
-		passenger_user app;
+    # Not familiar with Passenger, and used (G)Unicorn/Thin/Puma/pure Node before?
+    # Yes, this is all you need to deploy on Passenger! All the reverse proxying,
+    # socket setup, process management, etc are all taken care automatically for
+    # you! Learn more at https://www.phusionpassenger.com/.
+    passenger_enabled on;
+    passenger_user app;
 
-		sendfile    on;
-		client_max_body_size	1024M;
+    sendfile    on;
+    client_max_body_size	1024M;
 
-		proxy_read_timeout	300;
+    proxy_read_timeout	300;
 
-		# If this is a Ruby app, specify a Ruby version:
-		passenger_ruby	/usr/bin/ruby2.6;
-		# For Ruby 2.0
-		# passenger_ruby /usr/bin/ruby2.0;
-		# For Ruby 1.9.3 (you can ignore the "1.9.1" suffix)
-		#passenger_ruby /usr/bin/ruby1.9.1;
+    # If this is a Ruby app, specify a Ruby version:
+    passenger_ruby	/usr/bin/ruby2.6;
+    # For Ruby 2.0
+    # passenger_ruby /usr/bin/ruby2.0;
+    # For Ruby 1.9.3 (you can ignore the "1.9.1" suffix)
+    #passenger_ruby /usr/bin/ruby1.9.1;
 
-		# address nginx 499 errors & CPU spikes
-		passenger_ignore_client_abort on;
+    # address nginx 499 errors & CPU spikes
+    passenger_ignore_client_abort on;
 
-		ssl on;
-		ssl_certificate /etc/pki/tls/certs/localhost.crt;
-		ssl_certificate_key /etc/pki/tls/private/localhost.key;
+    ssl on;
+    ssl_certificate /etc/pki/tls/certs/localhost.crt;
+    ssl_certificate_key /etc/pki/tls/private/localhost.key;
 
-		ssl_trusted_certificate /usr/local/share/ca-certificates/GeoTrust_Universal_CA.pem;
+    ssl_trusted_certificate /usr/local/share/ca-certificates/GeoTrust_Universal_CA.pem;
 
-		ssl_protocols TLSv1.2;
-		ssl_ciphers 'kEECDH+ECDSA+AES128 kEECDH+ECDSA+AES256 kEECDH+AES128 kEECDH+AES256 kEDH+AES128 kEDH+AES256 DES-CBC3-SHA +SHA !aNULL !eNULL !LOW !kECDH !DSS !MD5 !EXP !PSK !SRP !CAMELLIA !SEED';
-		ssl_prefer_server_ciphers on;
+    ssl_protocols TLSv1.2;
+    ssl_ciphers 'kEECDH+ECDSA+AES128 kEECDH+ECDSA+AES256 kEECDH+AES128 kEECDH+AES256 kEDH+AES128 kEDH+AES256 DES-CBC3-SHA +SHA !aNULL !eNULL !LOW !kECDH !DSS !MD5 !EXP !PSK !SRP !CAMELLIA !SEED';
+    ssl_prefer_server_ciphers on;
 
-		ssl_dhparam /usr/local/share/ca-certificates/dhparam.pem;
+    ssl_dhparam /usr/local/share/ca-certificates/dhparam.pem;
 }
