removing remote_ip_logger.rb, using $remote_addr in webapp.conf

--- a/webapp.conf
+++ b/webapp.conf
@@ -5,7 +5,7 @@ server {
 }
 
 server {
-    listen 443 proxy_protocol;
+    listen 443;
     server_name $hostname;
     root /home/app/webapp/public;
     passenger_app_root /home/app/webapp;
@@ -30,8 +30,8 @@ server {
     }
 
     add_header        X-Forwarded-Proto https always;
-    proxy_set_header  X-Real-IP $proxy_protocol_addr;
-    proxy_set_header  X-Forwarded-For $proxy_protocol_addr;
+    proxy_set_header  X-Real-IP $remote_addr;
+    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Proto $scheme;
     proxy_set_header  Host $host;
     proxy_set_header  X-Forwarded-Host $host;
