--- a/webapp.conf
+++ b/webapp.conf
@@ -29,9 +29,13 @@ server {
             expires max;
     }
 
+    # real ip configuration
+    set_real_ip_from  34.120.207.56; # prod lb ip
+    set_real_ip_from  34.107.182.137; # staging lb ip
+    real_ip_header    X-Forwarded-For;
+    real_ip_recursive on;
+
     add_header        X-Forwarded-Proto https always;
-    proxy_set_header  X-Real-IP $remote_addr;
-    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Proto $scheme;
     proxy_set_header  Host $host;
     proxy_set_header  X-Forwarded-Host $host;
