--- a/webapp.conf
+++ b/webapp.conf
@@ -29,16 +29,17 @@ server {
             expires max;
     }
 
-    # real ip configuration
-    set_real_ip_from  34.120.207.56; # prod lb ip
-    set_real_ip_from  34.107.182.137; # staging lb ip
-    real_ip_header    X-Forwarded-For;
-    real_ip_recursive on;
-
     add_header        X-Forwarded-Proto https always;
+    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Proto $scheme;
     proxy_set_header  Host $host;
     proxy_set_header  X-Forwarded-Host $host;
+
+    # real ip configuration
+    set_real_ip_from  130.211.0.0/22;
+    set_real_ip_from  35.191.0.0/16;
+    real_ip_header    X-Forwarded-For;
+    real_ip_recursive on;
 
     # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
 
