--- a/nginx.conf
+++ b/nginx.conf
@@ -65,7 +65,7 @@ http {
 	# Logging Settings
 	##
 
-	log_format custom '$realip_remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
+	log_format custom '$proxy_add_x_forwarded_for - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
 	access_log /var/log/nginx/access.log custom;
 	error_log /var/log/nginx/error.log;
 
