--- a/webapp.conf
+++ b/webapp.conf
@@ -36,8 +36,8 @@ server {
     proxy_set_header  X-Forwarded-Host $host;
 
     # real ip configuration
-    set_real_ip_from  130.211.0.0/22;
-    set_real_ip_from  35.191.0.0/16;
+    set_real_ip_from  130.211.0.0/22; # GCP LB proxy range
+    set_real_ip_from  35.191.0.0/16; # GCP LB proxy range
     real_ip_header    X-Forwarded-For;
     real_ip_recursive on;
 
