--- a/webapp.conf
+++ b/webapp.conf
@@ -29,17 +29,18 @@ server {
             expires max;
     }
 
-    add_header        X-Forwarded-Proto https always;
-    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header  X-Forwarded-Proto $scheme;
-    proxy_set_header  Host $host;
-    proxy_set_header  X-Forwarded-Host $host;
-
     # real ip configuration
     set_real_ip_from  130.211.0.0/22; # GCP LB proxy range
     set_real_ip_from  35.191.0.0/16; # GCP LB proxy range
     real_ip_header X-Real-IP;
     real_ip_recursive on;
+
+    add_header        X-Forwarded-Proto https always;
+    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header  X-Real-Ip $realip_remote_addr;
+    proxy_set_header  X-Forwarded-Proto $scheme;
+    proxy_set_header  Host $host;
+    proxy_set_header  X-Forwarded-Host $host;
 
     # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
 
