--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ideogram": "1.28.0",
     "jquery": "3.5.1",
     "jquery-ui": "1.12.1",
+    "morpheus-app": "1.0.18",
     "plotly.js-dist": "1.58.4",
     "pluralize": "^8.0.0",
     "pnp-webpack-plugin": "^1.6.4",
