--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-switch": "6.0.0",
     "react-table": "^7.1.0",
     "spin.js": "^4.0.0",
-    "stylelint-config-sass-guidelines": "^7.0.0"
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "web-vitals": "^1.1.1",
+    "web-vitals-reporter": "^1.0.0"
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "^0.3.3",
