--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,5 +11,5 @@
       "styles/*": ["app/javascript/styles/*"]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "data", "log", "coverage", "bin", "public", "tcell", "db"]
 }
