--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-select": "^3.1.0",
     "react-switch": "6.0.0",
     "react-table": "^7.1.0",
+    "spearman-rho": "^1.0.6",
     "spin.js": "^4.0.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "web-vitals": "^1.1.1"
