--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@testing-library/react": "^10.0.4",
+    "@testing-library/jest-dom": "^5.13.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
