--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "spearman-rho": "^1.0.6",
     "spin.js": "^4.0.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "^0.3.3",
