--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
     "react-table": "^7.1.0",
     "spearman-rho": "^1.0.6",
     "spin.js": "^4.0.0",
+    "string-similarity": "^4.0.4",
     "stylelint-config-sass-guidelines": "^7.0.0",
-    "web-vitals": "^1.1.1",
-    "string-similarity": "^4.0.4"
+    "web-vitals": "^1.1.1"
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "^0.3.3",
-    "@testing-library/react": "^10.0.4",
     "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^10.0.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
