--- a/package.json
+++ b/package.json
@@ -42,16 +42,17 @@
     "react-select": "^3.1.0",
     "react-switch": "6.0.0",
     "react-table": "^7.1.0",
+    "sass": "^1.37.5",
     "spearman-rho": "^1.0.6",
     "spin.js": "^4.0.0",
+    "string-similarity": "^4.0.4",
     "stylelint-config-sass-guidelines": "^7.0.0",
-    "web-vitals": "^1.1.1",
-    "string-similarity": "^4.0.4"
+    "web-vitals": "^1.1.1"
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "^0.3.3",
-    "@testing-library/react": "^10.0.4",
     "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^10.0.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
@@ -70,7 +71,6 @@
     "jest-enzyme": "^7.1.2",
     "jest-fetch-mock": "^3.0.3",
     "node-fetch": "^2.6.1",
-    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "prettier-eslint": "^11.0.0",
     "prop-types": "^15.7.2",
