--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "prettier": "^1.19.1",
     "prettier-eslint": "^11.0.0",
     "prop-types": "^15.7.2",
+    "react-select-event": "^5.3.0",
     "stylelint-prettier": "^1.1.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "3.10.3"
