--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -58,10 +58,10 @@ development:
         # server_selection_timeout: 30
 
         # The maximum number of connections in the connection pool. (default: 5)
-        # max_pool_size: 5
+        max_pool_size: 10
 
         # The minimum number of connections in the connection pool. (default: 1)
-        # min_pool_size: 1
+        min_pool_size: 1
 
         # The time to wait, in seconds, in the connection pool for a connection
         # to be checked in before timing out. (default: 5)
@@ -135,6 +135,8 @@ production:
       options:
         user: 'single_cell'
         password: '<%= ENV['PROD_DATABASE_PASSWORD'] %>'
+        min_pool_size: 1
+        max_pool_size: 10
   options:
     raise_not_found_error: false
 staging:
@@ -146,6 +148,8 @@ staging:
       options:
         user: 'single_cell'
         password: '<%= ENV['PROD_DATABASE_PASSWORD'] %>'
+        min_pool_size: 1
+        max_pool_size: 10
   options:
     raise_not_found_error: false
 pentest:
@@ -157,6 +161,8 @@ pentest:
       options:
         user: 'single_cell'
         password: '<%= ENV['PROD_DATABASE_PASSWORD'] %>'
+        min_pool_size: 1
+        max_pool_size: 10
   options:
     raise_not_found_error: false
 test:
@@ -168,5 +174,7 @@ test:
       options:
         user: 'single_cell'
         password: '<%= ENV['PROD_DATABASE_PASSWORD'] %>'
+        min_pool_size: 1
+        max_pool_size: 10
   options:
     raise_not_found_error: false
