--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - jb-github-actions-ci
+      - development
+      - master
+  pull_request:
 
 jobs:
   Run-All-Tests:
