--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "camelcase-keys": "^6.1.2",
     "core-js": "^3.6.4",
-    "ideogram": "git://github.com/eweitz/ideogram.git#c17629c5b22c65c5f37b0836f8af7b5fdc61d777",
+    "ideogram": "1.33.0",
     "jquery": "3.5.1",
     "jquery-ui": "1.13.0",
     "morpheus-app": "1.0.18",
