--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-bootstrap": "^0.33.1",
+    "react-colorful": "^5.5.1",
     "react-compound-slider": "^3.0.0-beta.1",
     "react-dom": "^16.12.0",
     "react-notifications-component": "3.1.0",
