--- a/package.json
+++ b/package.json
@@ -82,6 +82,6 @@
     "react-select-event": "^5.3.0",
     "stylelint-prettier": "^1.1.2",
     "vite": "^2.7.7",
-    "vite-plugin-ruby": "^3.0.5",
+    "vite-plugin-ruby": "^3.0.5"
   }
 }
