--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "plotly.js-dist": "2.2.0",
     "pluralize": "^8.0.0",
     "postcss": "^8.2.10",
+    "postcss-import": "^14.0.2",
     "postcss-loader": "^4.0.3",
     "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
