--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ node_modules/*
 /app/assets/javascripts/igv.js
 /public/packs
 /public/packs-test
+/public/assets
 /node_modules
 yarn-debug.log*
 yarn-error.log*
