--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     }
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-react": "^7.8.3",
     "@databiosphere/bard-client": "^0.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
