--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
       "pre-push": "yarn test"
     }
   },
+  "engines" : {
+    "node" : ">=16.0.0"
+  },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-react": "^7.8.3",
