--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
       "pre-push": "yarn test"
     }
   },
-  "engines" : {
-    "node" : ">=16.0.0"
+  "engines": {
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
@@ -28,6 +28,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "camelcase-keys": "^6.1.2",
     "core-js": "^3.6.4",
+    "fflate": "^0.7.3",
     "ideogram": "1.34.0",
     "jquery": "3.5.1",
     "jquery-ui": "1.13.0",
