--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-compound-slider": "^3.0.0-beta.1",
     "react-dom": "^16.12.0",
     "react-notifications-component": "3.4.1",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.2.2",
     "react-switch": "6.0.0",
     "react-table": "^7.7.0",
@@ -79,6 +79,7 @@
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "jest-fetch-mock": "^3.0.3",
+    "jest-location-mock": "^1.0.9",
     "node-fetch": "^2.6.1",
     "prettier": "^1.19.1",
     "prettier-eslint": "^11.0.0",
