hiding sec-ch-ua header

--- a/webapp.conf
+++ b/webapp.conf
@@ -34,6 +34,9 @@ server {
     proxy_set_header  X-Forwarded-Proto $scheme;
     proxy_set_header  Host $host;
     proxy_set_header  X-Forwarded-Host $host;
+    # This address repeated bugs we've found with Chrome using non-standard quote escaping in this parameter
+    # see e.g. https://docs.google.com/document/d/1TTIGgu82qLJqGt130DlxWN5lsP7Wzo6FwuJSn5O_J_I
+    passenger_set_header sec-ch-ua "";
 
     # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
 
