Updating to latest version of `singlecellportal/rails-baseimage` (SCP-4290)

--- a/webapp.conf
+++ b/webapp.conf
@@ -5,7 +5,7 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name $hostname;
     root /home/app/webapp/public;
     passenger_app_root /home/app/webapp;
@@ -62,7 +62,6 @@ server {
     # address nginx 499 errors & CPU spikes
     passenger_ignore_client_abort on;
 
-    ssl on;
     ssl_certificate /etc/pki/tls/certs/localhost.crt;
     ssl_certificate_key /etc/pki/tls/private/localhost.key;
 
