--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,7 @@ env TCELL_AGENT_APP_ID;
 env TCELL_AGENT_API_KEY;
 env T_CELL_SERVER_AGENT_API_KEY;
 env NEWRELIC_AGENT_ID;
+env MIXPANEL_SECRET;
 env CI;
 env RAILS_LOG_TO_STDOUT;
 env TZ=America/New_York;
