--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,11 +4,7 @@
     "allowSyntheticDefaultImports": false,
     "baseUrl": "./",
     "paths": {
-      "components/*": ["app/javascript/components/*"],
-      "lib/*": ["app/javascript/lib/*"],
-      "packs/*": ["app/javascript/packs/*"],
-      "providers/*": ["app/javascript/providers/*"],
-      "styles/*": ["app/javascript/styles/*"]
+      "~/*": ["app/javascript/*"]
     }
   },
   "exclude": ["node_modules", "dist"]
