--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@fullhuman/postcss-purgecss": "^4.0.3",
     "@reach/router": "^1.3.3",
+    "@sentry/react": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "@single-cell-portal/igv": "2.6.4-beta.1",
     "@vitejs/plugin-react": "^1.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
