--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -29,7 +29,8 @@ jobs:
           CI: true
         run: |
           export VAULT_TOKEN=$( vault write -field=token auth/approle/login role_id=$VAULT_ROLE_ID secret_id=$VAULT_SECRET_ID )
-          echo "DOCKER_IMAGE_TAG: $GITHUB_REF_NAME-$GITHUB_SHA"
+          export DOCKER_IMAGE_TAG="$GITHUB_HEAD_REF-$GITHUB_SHA"
+          docker build -t $DOCKER_IMAGE_TAG .
           docker images
 #          bin/load_env_secrets.sh -p secret/kdux/scp/staging/scp_config.json \
 #                                  -s secret/kdux/scp/staging/scp_service_account.json \
