--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -32,6 +32,8 @@ jobs:
           export DOCKER_IMAGE_TAG="$GITHUB_HEAD_REF-$GITHUB_SHA"
           docker build -t $DOCKER_IMAGE_TAG .
           docker images
+          docker rim $DOCKER_IMAGE_TAG
+          docker images
 #          bin/load_env_secrets.sh -p secret/kdux/scp/staging/scp_config.json \
 #                                  -s secret/kdux/scp/staging/scp_service_account.json \
 #                                  -r secret/kdux/scp/staging/read_only_service_account.json \
