--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -29,11 +29,11 @@ jobs:
           CI: true
         run: |
           export VAULT_TOKEN=$( vault write -field=token auth/approle/login role_id=$VAULT_ROLE_ID secret_id=$VAULT_SECRET_ID )
-          export DOCKER_IMAGE_TAG="$GITHUB_HEAD_REF:$GITHUB_SHA"
-          docker build -t $DOCKER_IMAGE_TAG -f test/Dockerfile-test .
-          docker images
-#          bin/load_env_secrets.sh -p secret/kdux/scp/staging/scp_config.json \
-#                                  -s secret/kdux/scp/staging/scp_service_account.json \
-#                                  -r secret/kdux/scp/staging/read_only_service_account.json \
-#                                  -e test \
-#                                  -n single-cell-portal-test
+          DOCKER_IMAGE_NAME="gcr.io/broad-singlecellportal-staging/single-cell-portal"
+          DOCKER_IMAGE_TAG="$GITHUB_HEAD_REF:$GITHUB_SHA"
+          docker build -t $DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG -f test/Dockerfile-test .
+          bin/load_env_secrets.sh -p secret/kdux/scp/staging/scp_config.json \
+                                  -s secret/kdux/scp/staging/scp_service_account.json \
+                                  -r secret/kdux/scp/staging/read_only_service_account.json \
+                                  -e test -v $DOCKER_IMAGE_TAG \
+                                  -n single-cell-portal-test
