--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@testing-library/react": "^10.0.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.2.2",
+    "browser-cache-mock": "^0.1.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
@@ -78,6 +79,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "husky": "^4.2.5",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^26.0.1",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
