--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "camelcase-keys": "^6.1.2",
     "core-js": "^3.6.4",
+    "exifreader": "4.5.1",
     "fflate": "^0.7.3",
     "ideogram": "1.37.0",
     "jquery": "3.5.1",
