--- a/image-pipeline/package.json
+++ b/image-pipeline/package.json
@@ -17,7 +17,8 @@
     "exifreader": "4.5.1",
     "fflate": "^0.7.3",
     "puppeteer": "^15.4.0",
-    "sharp": "0.30.7"
+    "sharp": "0.30.7",
+    "@google-cloud/storage":  "^6.4.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
