--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -55,4 +55,4 @@ Style/ConditionalAssignment:
 
 Style/HashSyntax:
   EnforcedStyle: ruby19_no_mixed_keys
-  EnforcedShorthandSyntax: either
+  EnforcedShorthandSyntax: consistent
