Refine HDF5 JS package name

--- a/hdf5-js/package.json
+++ b/hdf5-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hdf5-js-proof",
+  "name": "@single-cell-portal/hdf5",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
