Let Rails set APP_INTERNAL_IP env var from Vault

--- a/nginx.conf
+++ b/nginx.conf
@@ -35,6 +35,7 @@ env NEWRELIC_AGENT_ID;
 env MIXPANEL_SECRET;
 env CI;
 env RAILS_LOG_TO_STDOUT;
+env APP_INTERNAL_IP;
 env TZ=America/New_York;
 daemon off;
 
