--- a/codecov.yml
+++ b/codecov.yml
@@ -3,3 +3,9 @@ codecov:
 comment:
   layout: "reach, diff, files"
   behavior: default
+coverage:
+  status:
+    patch: off
+  project:
+    default:
+      threshold: 0.1%
